Fix playlist header on mobile not respecting container boundary

--- a/src/components/domain/archive/playlists/header.module.scss
+++ b/src/components/domain/archive/playlists/header.module.scss
@@ -59,6 +59,11 @@
       object-fit: cover;
       float: right;
       height: 100%;
+
+      @media (max-width: $breakpoints-md) {
+        width: 100%;
+        float: none;
+      }
     }
   }
 }
